@@ -1,17 +1,15 @@
 Make sure all the useful parts of the C API were wrapped. 
 
-Weird crash occurs in the call test. Is this something that I'm doing?
+Weird crash occurs in the call test when testing the incoming arguments?
 
 The color code has turned out to be sub-par, lots of room for improvment.
 
-Signal handlers might need to be backed up. (see how the old one did this. Is it still necessary? Seems not.)
+Figure out how the brush selection should really work.
 
-Add a list type parameter.
+Add a list type parameter for the dialog.
 
 Add a reset button to the interactive dialog.
 
-Get widget resizing under control.
+Add more control to widget resizing for the dialog.
 
-Console mode.
-
-Localization issues?
+gettext support for dialogs.
